user auth is working, now I need to add a create user page and have that take in values for a user object and create it

--- a/createuser.html
+++ b/createuser.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>User Objects</title>
+    <title>Create USer</title>
     <meta charset="UTF-8"/>
-    <meta name="description" content="user objects">
+    <meta name="description" content="Create an account">
     <meta name="author" contents="John Mackey">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
@@ -11,18 +11,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,400&display=swap" rel="stylesheet">  
     <link rel="shortcut icon" type="image/png" href="favicon.png">
 </head>
-<body>
+<body id="create">
    <div class="center-container-wrapper">
-        <div class="center">
-                <h1>User objects</h1>
-                <p>Experimenting with user object creation and control</p>
+        <div class="center">             
+        
+                <h1>Create an Account</h1>
+                <p>Put your user account information down below</p>
                 <div class="input-wrapper">
                     <input id="u" label="User" class="username" type='text' placeholder="user"></input>
                     <input id="pw" label="Password" class="password" type='password' placeholder="password"></input>
                 </div>
 
-               <button onClick="verifyUser(user)" id="button">Login</button>
-               <a href="createuser.html">Create an account</a>
+               <button onClick="verifyUser(user)" id="button" >Login</button>
         </div>
    </div>
 
